--- a/style.css
+++ b/style.css
@@ -1,1 +1,9 @@
-
+body {
+  background-image: linear-gradient(90deg, #8ae6f9 0%, #00b2ba 100%);
+  background-size: 100% 200px;
+  background-position: 0 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
