--- a/style.css
+++ b/style.css
@@ -1,7 +1,21 @@
 body {
-  background-image: linear-gradient(90deg, #8ae6f9 0%, #00b2ba 100%);
-  background-size: 100% 200px;
-  background-position: 0 0;
+  background-image: 
+    linear-gradient(
+      45deg, 
+      #0003 25%, 
+      #0003 75%, 
+      #0003 100%
+    ),
+    repeating-linear-gradient(
+      90deg, 
+      #0003, 
+      0 0, 
+      5px 0, 
+      #0003 0 5px, 
+      5px 5px, 
+      #0003 5px 5px 
+    );
+  background-size: 10px 10px;
   height: 100vh;
   display: flex;
   justify-content: center;
